releases/argo-cd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http
  namespace: argocd
spec:
  parentRefs:
    - name: gateway
      namespace: istio-ingress
  hostnames: [ "cd.shamrock.systems" ]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
